# COAL

./: .gitignore  README.md  pyproject.toml  testing.py
COAL/: COAL.py  board.py  move.py  pieces.py  utils.py
src/COAT/: COAT.py  render.py
src/coal/: board.py  coal.py  move.py  render.py  utils.py
test/: test_game_count.py  test_utils.py
tests/: test_game_count.py  test_utils.py
